# pytest-jax-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pytest_jax_bench/: __init__.py  cli_plot.py  data.py  plots.py  plugin.py  utils.py
tests/: test_example.py  test_examples.py  test_interface.py  test_tags.py
