[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pytest-jax-bench"
version = "0.1.0"
description = "Pytest plugin to profile jitted JAX functions (compile time, runtime, memory)."
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
"pytest>=7",
"jax>=0.4.26",
]

[project.optional-dependencies]
mem = ["psutil>=5.9", "pynvml>=11"]

[project.entry-points.pytest11]
pytest_jax_bench = "pytest_jax_bench.plugin"

[project.scripts]
ptjb-plot = "pytest_jax_bench.cli_plot:main"

[tool.pytest.ini_options]
addopts = "-q"